# Phishing_scanner

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: keywords.txt
src/phishing_scanner/: __init__.py  __main__.py  cli.py  exceptions.py  models.py  scanner.py  threat_intel.py
tests/: conftest.py  test_cli.py  test_scanner.py  test_threat_intel.py
