[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-scanner"
version = "1.0.0"
description = "Heuristic phishing URL/domain scanner with risk scoring, cached threat intel, and a scriptable CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "KaniskRaj" },
    { name = "Vignesh85245" },
]
keywords = ["phishing", "security", "url-scanner", "threat-intel", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Kept intentionally minimal -- this is a security tool, and every runtime
# dependency is additional supply-chain surface. requests + tldextract are
# the only two doing work that isn't trivial to write with the stdlib.
dependencies = [
    "requests>=2.31,<3",
    "tldextract>=5.1,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
phishing-scanner = "phishing_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/KaniskRaj/phishing-scanner"
Issues = "https://github.com/KaniskRaj/phishing-scanner/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phishing_scanner = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=phishing_scanner --cov-report=term-missing"
testpaths = ["tests"]
